--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,17 +20,20 @@ dependencies = [
     "pymongo==4.11",
     "beanie==1.29.0",
     "timm==1.0.14",
-    "einops==0.8.0"
+    "einops==0.8.0",
+    "odmantic>=1.0.2",
 ]
 
 [tool.uv]
 dev-dependencies = [
     "pytest<8.0.0,>=7.4.3",
+    "pytest-asyncio>=0.23.8",
     "mypy<2.0.0,>=1.8.0",
     "ruff<1.0.0,>=0.2.2",
     "pre-commit<4.0.0,>=3.6.2",
     "types-passlib<2.0.0.0,>=1.7.7.20240106",
     "coverage<8.0.0,>=7.4.3",
+    "ipykernel>=6.29.5",
 ]
 
 [build-system]
