--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -98,7 +98,7 @@ ipython_config.py
 #   Similar to Pipfile.lock, it is generally recommended to include uv.lock in version control.
 #   This is especially recommended for binary packages to ensure reproducibility, and is more
 #   commonly ignored for libraries.
-#uv.lock
+uv.lock
 
 # poetry
 #   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
@@ -168,10 +168,6 @@ cython_debug/
 
 # Data
 outputs/
-*.bin
-ragtest/
-
 assets/
-debug/
 data/
-db/
+lancedb/
