--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,9 @@
     "@react-pdf-viewer/search": "^3.12.0",
     "@react-pdf-viewer/thumbnail": "^3.12.0",
     "@react-pdf-viewer/toolbar": "^3.12.0",
+    "@types/classnames": "^2.3.0",
     "class-variance-authority": "^0.7.1",
+    "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "electron-updater": "^6.3.9",
     "lucide-react": "^0.474.0",
@@ -36,7 +38,6 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "prettier": "^3.5.1",
     "@playwright/test": "^1.48.2",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
@@ -47,8 +48,10 @@
     "msw": "^2.7.0",
     "postcss": "^8.4.49",
     "postcss-import": "^16.1.0",
+    "prettier": "^3.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "sass": "^1.85.0",
     "tailwindcss": "^3.4.15",
     "typescript": "^5.4.2",
     "vite": "^5.4.11",
